--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -5,19 +5,18 @@
   "description": "A tool to disable Netflix's 'Continue Watching' function",
   "version": "1.0",
 
-  "content_scripts": [
-    {
-      "matches": ["https://www.netflix.com/*"],
-      "js": [ "core.js"]
-    }
-  ],
+  "background": {
+    "scripts": ["background.js"]
+  },
 
   "browser_action": {
     "default_icon": "icon.png",
-    "default_popup": "popup.html",
     "default_title": "Toggle goflix"
   },
   "permissions": [
-    "activeTab"
+    "storage",
+    "tabs",
+    "https://*/*",
+    "http://*/*"
   ]
 }
